<?xml version="1.0" encoding="UTF-8" ?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
>
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.example</groupId>
  <artifactId>root-parent-project</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>

  <properties>
    <revision>0.0.0</revision>
    <java.version>17</java.version>
    <kotlin.version>1.9.20</kotlin.version>
    <spring.boot.version>3.2.0</spring.boot.version>
    <micronaut.version>4.2.0</micronaut.version>
    <quarkus.version>3.5.3</quarkus.version>
    <maven-checkstyle-plugin.version>3.3.1</maven-checkstyle-plugin.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.5.0</version>
        <configuration>
          <updatePomFile>true</updatePomFile>
          <flattenMode>resolveCiFriendliesOnly</flattenMode>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>com.example</groupId>
            <artifactId>build-tools</artifactId>
            <version>${project.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>ktlint</id>
            <configuration>
              <target name="ktlint">
                <java
                  taskname="ktlint"
                  dir="${basedir}"
                  fork="true"
                  failonerror="true"
                  classpathref="maven.plugin.classpath"
                  classname="com.pinterest.ktlint.Main"
                >
                  <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
                  <!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
                  <arg value="src/**/*.kt" />
                </java>
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
          <execution>
            <id>ktlint-format</id>
            <configuration>
              <target name="ktlint">
                <java
                  taskname="ktlint"
                  dir="${basedir}"
                  fork="true"
                  failonerror="true"
                  classpathref="maven.plugin.classpath"
                  classname="com.pinterest.ktlint.Main"
                >
                  <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
                  <!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
                  <arg value="-F" />
                  <arg value="src/**/*.kt" />
                </java>
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>com.pinterest.ktlint</groupId>
            <artifactId>ktlint-cli</artifactId>
            <version>1.1.0</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <modules>
    <module>build-tools</module>
    <module>spring-boot/parent-project</module>
    <module>spring-boot/app</module>
    <module>spring-boot/lib</module>
    <module>spring-boot/kt-app</module>
    <module>spring-boot/kt-lib</module>
    <module>micronaut/micronaut-parent-project</module>
    <module>micronaut/micronaut-app</module>
    <module>micronaut/micronaut-lib</module>
    <module>quarkus/quarkus-parent-project</module>
    <module>quarkus/quarkus-app</module>
    <module>quarkus/quarkus-lib</module>
  </modules>
</project>
